Add script section to Python build job in .travis.yml

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,8 @@ matrix:
       install:
         - pip install pipenv
         - pipenv install
+      script:
+        - echo "done"
     - language: node_js
       node_js: 10.16.3
       before_install: cd src/frontend
