--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -10,9 +10,12 @@
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-scripts": "3.1.1",
+    "react-styleguidist": "^9.1.16",
     "typescript": "3.6.3"
   },
   "scripts": {
+    "styleguide": "styleguidist server",
+    "styleguide:build": "styleguidist build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
