--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -11,7 +11,7 @@
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.1.1",
+    "react-scripts": "^3.2.0",
     "react-styleguidist": "^9.1.16",
     "typescript": "3.6.3"
   },
