--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/react": "16.9.2",
     "@types/react-dom": "16.9.0",
     "@types/react-router-dom": "^5.1.0",
+    "@types/react-tabs": "^2.3.1",
     "@typescript-eslint/eslint-plugin": "^2.2.0",
     "@typescript-eslint/parser": "^2.2.0",
     "babel-eslint": "10.0.3",
@@ -53,6 +54,7 @@
     "react-dom": "^16.9.0",
     "react-router-dom": "^5.1.2",
     "react-styleguidist": "^9.1.16",
+    "react-tabs": "^3.1.0",
     "resolve": "1.12.0",
     "resolve-url-loader": "3.1.0",
     "sass-loader": "7.2.0",
