--- a/Pipfile
+++ b/Pipfile
@@ -13,6 +13,8 @@ django-heroku = "*"
 djangorestframework = "*"
 pillow = "*"
 whitenoise = "*"
+djangorestframework-simplejwt = "*"
+django-cors-headers = "*"
 
 [requires]
 python_version = "3.7"
