--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "postcss-safe-parser": "4.0.1",
     "react": "^16.9.0",
     "react-app-polyfill": "^1.0.4",
+    "react-collapsible": "^2.7.0",
     "react-dev-utils": "^9.1.0",
     "react-dom": "^16.9.0",
     "react-router-dom": "^5.1.2",
