--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "@svgr/webpack": "4.3.2",
     "@types/jest": "24.0.18",
     "@types/node": "12.7.5",
-    "@types/react": "16.9.2",
+    "@types/react": "^16.9.0",
     "@types/react-dom": "16.9.0",
     "@types/react-router-dom": "^5.1.0",
     "@types/react-tabs": "^2.3.1",
