--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@types/node": "12.7.5",
     "@types/react": "16.9.2",
     "@types/react-dom": "16.9.0",
+    "@types/react-modal": "^3.10.5",
     "@types/react-router-dom": "^5.1.0",
     "@types/react-tabs": "^2.3.1",
     "@typescript-eslint/eslint-plugin": "^2.2.0",
@@ -53,6 +54,7 @@
     "react-collapsible": "^2.7.0",
     "react-dev-utils": "^9.1.0",
     "react-dom": "^16.9.0",
+    "react-modal": "^3.11.2",
     "react-router-dom": "^5.1.2",
     "react-styleguidist": "^9.1.16",
     "react-tabs": "^3.1.0",
