--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@babel/core": "7.6.0",
     "@svgr/webpack": "4.3.2",
     "@types/jest": "24.0.18",
+    "@types/jwt-decode": "^2.2.1",
     "@types/lodash.clonedeep": "^4.5.6",
     "@types/node": "12.7.5",
     "@types/react": "^16.9.0",
