Fix travis script for yarn 2

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,21 @@
-before_install: # if "install" is overridden
-  # Repo for Yarn
-  - sudo apt-key adv --fetch-keys http://dl.yarnpkg.com/debian/pubkey.gpg
-  - echo "deb http://dl.yarnpkg.com/debian/ stable main" | sudo tee /etc/apt/sources.list.d/yarn.list
-  - sudo apt-get update -qq
-  - sudo apt-get install -y -qq yarn
 cache:
-  yarn: true
+  # Yarn 2 does not store dependencies in node_modules anymore, at least not by default.
+  # If you are using the node-modules plugin, remove the `npm: false` line.
+  npm: false
+  # Yarn 2 caches to the local .yarn directory, not the Travis default `$HOME/.yarn` 
+  directories:
+    - ./.yarn/cache
+
+before_install:
+  # Upgrade Yarn 1.x: https://classic.yarnpkg.com/en/docs/install
+  - curl -o- -L https://yarnpkg.com/install.sh | bash
+  - export PATH="$HOME/.yarn/bin:$PATH"
+  # Then the local Yarn 2 should be available and get used
+  - yarn -v
+
+# Use custom install step as Travis by default uses the --frozen-lockfile flag, which is deprecated
+install: yarn
+
 matrix:
   include:
     - language: python
