--- a/.travis.yml
+++ b/.travis.yml
@@ -8,8 +8,7 @@ cache:
 
 before_install:
   # Upgrade Yarn 1.x: https://classic.yarnpkg.com/en/docs/install
-  - curl -o- -L https://yarnpkg.com/install.sh | bash
-  - export PATH="$HOME/.yarn/bin:$PATH"
+  - npm install -g yarn
   # Then the local Yarn 2 should be available and get used
   - yarn -v
 
