Replaced react-collapsible with MUI accordion

--- a/package.json
+++ b/package.json
@@ -4,6 +4,11 @@
   "private": true,
   "dependencies": {
     "@babel/core": "7.6.0",
+    "@emotion/react": "^11.4.1",
+    "@emotion/styled": "^11.3.0",
+    "@mui/icons-material": "^5.0.1",
+    "@mui/lab": "^5.0.0-alpha.48",
+    "@mui/material": "^5.0.1",
     "@svgr/webpack": "4.3.2",
     "@types/jest": "24.0.18",
     "@types/jwt-decode": "^2.2.1",
@@ -23,6 +28,7 @@
     "case-sensitive-paths-webpack-plugin": "2.2.0",
     "chalk": "^4.1.2",
     "css-loader": "2.1.1",
+    "date-fns": "^2.24.0",
     "dotenv": "6.2.0",
     "dotenv-expand": "5.1.0",
     "eslint": "^6.1.0",
