--- a/package.json
+++ b/package.json
@@ -63,9 +63,11 @@
     "react-dev-utils": "^9.1.0",
     "react-dom": "^16.9.0",
     "react-feather": "^2.0.3",
+    "react-redux": "^7.2.6",
     "react-router-dom": "^5.1.2",
     "react-styleguidist": "^9.1.16",
     "react-tabs": "^3.1.0",
+    "redux": "^4.1.2",
     "resolve": "1.12.0",
     "resolve-url-loader": "3.1.0",
     "sass-loader": "7.2.0",
