--- a/package.json
+++ b/package.json
@@ -68,6 +68,8 @@
     "react-styleguidist": "^9.1.16",
     "react-tabs": "^3.1.0",
     "redux": "^4.1.2",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-thunk": "^2.4.1",
     "resolve": "1.12.0",
     "resolve-url-loader": "3.1.0",
     "sass-loader": "7.2.0",
