--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "jest-resolve": "24.9.0",
     "jest-watch-typeahead": "0.4.0",
     "jwt-decode": "^2.2.0",
+    "lodash": "^4.17.21",
     "mini-css-extract-plugin": "0.8.0",
     "optimize-css-assets-webpack-plugin": "5.0.3",
     "pnp-webpack-plugin": "1.5.0",
