--- a/package.json
+++ b/package.json
@@ -124,6 +124,7 @@
     ]
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.178",
     "eslint-config-prettier": "^6.3.0",
     "eslint-plugin-prettier": "^3.1.1",
     "prettier": "^2.0.1",
