--- a/Pipfile
+++ b/Pipfile
@@ -8,7 +8,7 @@ autopep8 = "*"
 black = "*"
 
 [packages]
-django = "*"
+django = "==3.2.7"
 gunicorn = "*"
 django-heroku = "*"
 djangorestframework = "*"
